# RAG

./: pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingsoc.ipynb  4-dataparsingexcel.ipynb  5-dataparsingjson.ipynb  6-dataparsingdatabase.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/structured_files/: inventory.xlsx
0-DataIngestParsing/data/text_files/: machinelearning_intro.txt  python_intro.txt
VectorEmbeddingAndDatabases/: embedding.ipynb  openai_embeddings.ipynb
